restructured app/tilt setup with dedicated config-maps for the sender and receiver to support live reloading of both apps when config map is changed. Added paragraphs to the blog text.

--- a/deploy/app/kustomization.yaml
+++ b/deploy/app/kustomization.yaml
@@ -3,9 +3,10 @@ kind: Kustomization
 
 resources:
 - namespace.yaml
-- configmap.yaml
 - receiver.yaml
+- configmap-receiver.yaml
 - sender.yaml
+- configmap-sender.yaml
 
 secretGenerator:
 - name: autoscale-credz
