--- a/deploy/app/receiver.yaml
+++ b/deploy/app/receiver.yaml
@@ -19,7 +19,7 @@ spec:
       - name: sb-queue-receiver
         envFrom:
           - configMapRef:
-              name: autoscale-config
+              name: autoscale-config-receiver
           - secretRef:
               name: autoscale-credz
         image: sb-queue-receiver
