--- a/deploy/app/configmap-receiver.yaml
+++ b/deploy/app/configmap-receiver.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: autoscale-config
+  name: autoscale-config-receiver
   namespace: autoscale-demo
 data:
   SERVICEBUS_QUEUE_NAME: "autoscalequeue"
-  NR_MESSAGES: "1000"
+  WAIT_TIME: "0"
