--- a/deploy/app/sender.yaml
+++ b/deploy/app/sender.yaml
@@ -11,7 +11,7 @@ spec:
       - name: sb-queue-sender
         envFrom:
           - configMapRef:
-              name: autoscale-config
+              name: autoscale-config-sender
           - secretRef:
               name: autoscale-credz
         image: sb-queue-sender
